# Workmate-tasks

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: conftest.py
tests/unit_tests/: test_main.py
tests/unit_tests/mock_data/: products.csv
