[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
mypy = "^1.16.1"
types-tabulate = "^0.9.0.20241207"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "truthy-bool", "redundant-expr"]
strict_bytes = true
local_partial_types = true

[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]